--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bs58check": "^4.0.0",
 		"chalk": "^5.3.0",
 		"commander": "^12.1.0",
 		"elliptic": "^6.5.7"
