--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
 	"description": "",
 	"main": "keys.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "mocha"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"bs58check": "^4.0.0",
+		"chai": "^5.1.1",
 		"chalk": "^5.3.0",
 		"commander": "^12.1.0",
-		"elliptic": "^6.5.7"
+		"elliptic": "^6.5.7",
+		"mocha": "^10.7.3"
 	}
 }
