--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"chai": "^5.1.1",
 		"chalk": "^5.3.0",
 		"commander": "^12.1.0",
+		"d3-random": "^3.0.1",
 		"elliptic": "^6.5.7",
 		"mocha": "^10.7.3"
 	}
